Support structured protocolInfo for five-protocol link generation
Add protocolInfo to Node Manager contract, encrypt/persist/decrypt it in residential_allocations (protocol_info_cipher), add frontend link builder (protocols.js), and fix UTF-8 encoding of protocol error messages.